[gd_scene load_steps=6 format=3 uid="uid://devh745qqm317"]

[ext_resource type="PhysicsMaterial" uid="uid://cplha4jwcmqqx" path="res://materials/physics_materials/enviroment/enviroment_physics_material.tres" id="1_3wpkp"]
[ext_resource type="PackedScene" uid="uid://bklximox2pr2b" path="res://assets/models/interactable_objects/board/board.glb" id="1_cjy40"]
[ext_resource type="Script" path="res://scripts/interactable_objects/class_board.gd" id="1_lklyq"]
[ext_resource type="Script" path="res://scripts/interface_nodes/interactable.gd" id="2_hcg8r"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qpw0d"]
size = Vector3(1.56, 1.176, 0.022)

[node name="ClassBoard" type="StaticBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
collision_layer = 5
collision_mask = 0
physics_material_override = ExtResource("1_3wpkp")
script = ExtResource("1_lklyq")

[node name="BoardModel" parent="." instance=ExtResource("1_cjy40")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.045, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.32626e-05, 0.588025, -0.010498)
shape = SubResource("BoxShape3D_qpw0d")

[node name="Interactable" type="Node" parent="."]
script = ExtResource("2_hcg8r")
is_can_interacted = false
is_show_name_info = false
object_description = "This is the class"

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="BoardModel"]
